[gd_scene load_steps=39 format=3 uid="uid://dn1s3s0bn1p55"]

[ext_resource type="Script" uid="uid://b38x2ay43cpaq" path="res://entities/player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://ba8abnwod4uk0" path="res://entities/player/player_sheet.png" id="3_g1dw6"]
[ext_resource type="Script" uid="uid://b1tcxqcvpl58t" path="res://entities/player/player_animations.gd" id="3_yw30f"]
[ext_resource type="Script" uid="uid://cuy3bfxiijs7q" path="res://entities/player/player_movement.gd" id="4_yw30f"]
[ext_resource type="Script" uid="uid://be65ce6xyjcbe" path="res://entities/player/player_grab_system.gd" id="5_qjkh3"]
[ext_resource type="Script" uid="uid://cauq4mrusxe1n" path="res://components/grab_component.gd" id="6_8fjmc"]
[ext_resource type="Script" uid="uid://bsre3lqp4uqxa" path="res://components/grabber_component.gd" id="6_qiwj3"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_yw30f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjkh3"]
size = Vector2(92.5, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("3_g1dw6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1984, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("3_g1dw6")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1728, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("3_g1dw6")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("3_g1dw6")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1856, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("3_g1dw6")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("3_g1dw6")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("3_g1dw6")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("3_g1dw6")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hag"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1472, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqiix"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1536, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7oew"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1600, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c35mf"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1664, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65viv"]
atlas = ExtResource("3_g1dw6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7c3f"]
atlas = ExtResource("3_g1dw6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjvpn"]
atlas = ExtResource("3_g1dw6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7qer"]
atlas = ExtResource("3_g1dw6")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4c7l"]
atlas = ExtResource("3_g1dw6")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_knn7v"]
atlas = ExtResource("3_g1dw6")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pqkx"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw77l"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rptt4"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7pn3"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8hi5"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uvqg"]
atlas = ExtResource("3_g1dw6")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1s1yo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}],
"loop": true,
"name": &"idle_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}],
"loop": true,
"name": &"jump_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}],
"loop": true,
"name": &"jump_down_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}],
"loop": false,
"name": &"jump_land",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}],
"loop": false,
"name": &"jump_land_2",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_ebec5")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_yllr7")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_kb6p2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wodsf")
}],
"loop": false,
"name": &"jump_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqiix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7oew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c35mf")
}],
"loop": false,
"name": &"jump_up_2",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_65viv")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_x7c3f")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_bjvpn")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_s7qer")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_g4c7l")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_knn7v")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_7pqkx")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_uw77l")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_rptt4")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_r7pn3")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_b8hi5")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_2uvqg")
}],
"loop": true,
"name": &"run_2",
"speed": 5.0
}]

[node name="Player" type="RigidBody2D"]
show_behind_parent = true
mass = 60.0
physics_material_override = SubResource("PhysicsMaterial_yw30f")
lock_rotation = true
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.75, 0)
shape = SubResource("RectangleShape2D_qjkh3")

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_1s1yo")
animation = &"run_2"
speed_scale = 2.0
script = ExtResource("3_yw30f")

[node name="PlayerMovement" type="Node2D" parent="."]
script = ExtResource("4_yw30f")

[node name="RayCast1" type="RayCast2D" parent="PlayerMovement"]
position = Vector2(-45, 43)
target_position = Vector2(0, 7)

[node name="RayCast2" type="RayCast2D" parent="PlayerMovement"]
position = Vector2(-17, 43)
target_position = Vector2(0, 7)

[node name="RayCast3" type="RayCast2D" parent="PlayerMovement"]
position = Vector2(16, 43)
target_position = Vector2(0, 7)

[node name="RayCast4" type="RayCast2D" parent="PlayerMovement"]
position = Vector2(46, 43)
target_position = Vector2(0, 7)

[node name="PlayerGrabSystem" type="Node2D" parent="."]
script = ExtResource("5_qjkh3")

[node name="RayCast1" type="RayCast2D" parent="PlayerGrabSystem"]
position = Vector2(42, -36)
target_position = Vector2(28, 0)

[node name="RayCast2" type="RayCast2D" parent="PlayerGrabSystem"]
position = Vector2(42, -11)
target_position = Vector2(28, 0)

[node name="RayCast3" type="RayCast2D" parent="PlayerGrabSystem"]
position = Vector2(42, 12.000002)
target_position = Vector2(28, -1.9073486e-06)

[node name="GrabberComponent" type="Node2D" parent="PlayerGrabSystem"]
script = ExtResource("6_qiwj3")
metadata/_custom_type_script = "uid://bsre3lqp4uqxa"

[node name="GrabbableComponent" type="Node2D" parent="PlayerGrabSystem"]
script = ExtResource("6_8fjmc")
metadata/_custom_type_script = "uid://cauq4mrusxe1n"
